[build-system]
requires = ["setuptools>=69.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "june-va"
authors = [
  {name = "Mezbaul Haque"},
]
description = "Local voice chatbot for engaging conversations, powered by Ollama, Hugging Face Transformers, and Coqui TTS Toolkit"
keywords = [
  "ai",
  "ai assistant",
  "chatbot",
  "coqui tts",
  "hugging face",
  "local assistant",
  "machine learning",
  "natural language processing",
  "nlp",
  "ollama",
  "python",
  "speech recognition",
  "speech synthesis",
  "text-to-speech",
  "voice assistant",
  "voice commands",
  "voice interaction",
  "virtual assistant"
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.scripts]
june-va = "june_va.cli:main"

[project.urls]
Homepage = "https://github.com/mezbaul-h/june"
Repository = "https://github.com/mezbaul-h/june.git"
Issues = "https://github.com/mezbaul-h/june/issues"

[tool.bandit]
exclude_dirs = ["venv"]
skips = ["B101"]

[tool.black]
color = true
line-length = 119

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]

[tool.coverage.run]
branch = true
omit = [
  "*/test/*",
  "settings.py",
]
source = ["june_va"]

[tool.isort]
color_output = true
line_length = 119
multi_line_output = 3
profile = "black"
py_version = "auto"

[tool.mypy]
exclude = ["test"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --verbose"
testpaths = ["test"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "june_va.__version__"}

[tool.setuptools.packages]
find = {}
